# fn-fixture-rs

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: rust.yml
fn-fixture/: Cargo.toml  README.md
fn-fixture-lib/: Cargo.toml  README.md
fn-fixture-lib/src/: lib.rs  traits.rs
fn-fixture/snapshot-tests/code/panics/TestPanic/: expected.txt  input.rs
fn-fixture/snapshot-tests/code/panics/TestPanicObject/: expected.txt  input.rs
fn-fixture/snapshot-tests/code/panics/TestPanic_IO/: expected.txt  input.rs
fn-fixture/snapshot-tests/code/plain_value/binary/: expected.txt
fn-fixture/snapshot-tests/code/plain_value/plaintext/: expected.txt
fn-fixture/snapshot-tests/code/plain_value/rust_complex_bufread/: expected.txt  input.rs
fn-fixture/snapshot-tests/code/plain_value/rust_complex_primes/: expected.txt  input.rs
fn-fixture/snapshot-tests/code/plain_value/rust_number/: expected.txt
fn-fixture/snapshot-tests/code/plain_value/rust_string/: expected.txt
fn-fixture/snapshot-tests/examples/good_number/: parse_unsigned_number.txt
fn-fixture/snapshot-tests/examples/sometimes_number/: parse_signed_number.txt  parse_unsigned_number.txt
fn-fixture/snapshot-tests/source/bads/: input.rs  transform.txt  transform_plaintext.txt
fn-fixture/snapshot-tests/source/code_directory/: input.rs  transform.txt  transform_plaintext.txt
fn-fixture/snapshot-tests/source/examples/parse_signed_number/: input.rs  transform.txt  transform_plaintext.txt
fn-fixture/snapshot-tests/source/examples/parse_unsigned_number/: input.rs  transform.txt  transform_plaintext.txt
fn-fixture/snapshot-tests/source/on_variable/: input.rs  transform.txt  transform_plaintext.txt
fn-fixture/snapshot-tests/source/plaintext_code_directory/: input.rs  transform.txt  transform_plaintext.txt
fn-fixture/src/: lib.rs
fn-fixture/tests/: self_snapshots.rs
