[package]
name = "fn-fixture"
version = "1.0.2"
edition = "2018"
license = "MIT"
homepage = "https://github.com/Wolvereness/fn-fixture-rs/tree/main/fn-fixture"
documentation = "https://github.com/Wolvereness/fn-fixture-rs/tree/main/fn-fixture"
repository = "https://github.com/Wolvereness/fn-fixture-rs/"
authors = ["Velocity, A Managed Services Company", "Wesley Wolfe"]
keywords = ["testing", "snapshot", "fixture"]
categories = ["development-tools::testing"]
description = "Procedural macro designed to quickly generate snapshots of a fixture"
readme = "README.md"
include = ["src/lib.rs", "Cargo.toml"]

[lib]
proc-macro = true

[dependencies.fn-fixture-lib]
path = "../fn-fixture-lib"
version = "=1.0.2"

[dev-dependencies]
rustfmt = "0.10.0"
